# omnisync

./: .gitignore  Cargo.toml  Makefile  README.md  omnisync.db  omnisync_test.db  test_gdrive.sh  test_run.sh
.github/workflows/: release.yml
omnisync-cli/: Cargo.toml
omnisync-cli/src/: main.rs
omnisync-core/: Cargo.toml
omnisync-core/migrations/: 20240101000000_init.sql  20240101000001_sync_pairs.sql  20240101000002_credentials.sql  20240101000003_add_remote_name.sql  20240101000004_add_user_info.sql  20240101000005_add_last_sync.sql
omnisync-core/src/: config.rs  engine.rs  lib.rs  models.rs  provider.rs  watcher.rs
omnisync-core/src/providers/: gdrive.rs  mod.rs
omnisync-core/tests/: integration_test.rs  sync_pairs_test.rs
omnisync-gui/src-tauri/: Cargo.toml  tauri.conf.json
omnisync-gui/src-tauri/capabilities/: default.json
omnisync-gui/src-tauri/icons/: icon.icns
omnisync-gui/src-tauri/src/: main.rs
