[package]
name = "omnisync-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
notify = "6.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
keyring = "2.3"
async-trait = "0.1"
serde_json = "1.0"
url = "2.5"
dotenvy = "0.15"
thiserror = "1.0"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
md5 = "0.7"
async-recursion = "1.0"
chrono = "0.4"
futures = "0.3.32"
